--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,9 @@ jobs:
           java-version: 1.11
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify -Dspring.profiles.active=ci
+      - name: Cache Maven packages
+        uses: actions/cache@v1
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
